# langchain-deepagent

./: .env.example  .gitignore  Dockerfile  LICENSE  PRODUCTION_READINESS.md  README.md  deep_agent.py  langgraph.json  main.py  plan.md  pyproject.toml  pytest.ini  requirements.txt  resources_dedup.txt  resources_raw.txt  verify_global_config.py
config/: checkpointer.py
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/operations/: DEPLOYMENT_GUIDE.md  INCIDENT_RESPONSE.md  MONITORING_GUIDE.md
docs/production/: PRODUCTION_READINESS.md
docs/security/: SECURITY_RUNBOOK.md
homebrew-luminamind/Formula/: luminamind.rb
luminamind/: deep_agent.py  langgraph.json  main.py
luminamind/config/: checkpointer.py  env.py  settings.py
luminamind/observability/: __init__.py  logging.py  metrics.py
luminamind/py_tools/: edit.py  grep.py  multi_replace.py  os_info.py  patch.py  read_many.py  read_segment.py  registry.py  replace_in_file.py  safety.py  shell.py  tree.py  weather.py  web_markdown.py  web_search.py
luminamind/utils/: __init__.py  content_manager.py  http_client.py  llm_wrapper.py  rate_limit.py  tool_wrapper.py
py_tools/: __init__.py  registry.py  safety.py  shell.py  web_crawl.py  web_search.py
scripts/: install_luminamind.ps1  install_luminamind.sh
tests/integration/: __init__.py  test_large_file_handling.py  test_tool_execution.py
tests/unit/: test_edit.py  test_llm_wrapper.py  test_os_info.py  test_read_segment.py  test_registry.py  test_replace_in_file.py  test_safety.py  test_shell.py  test_weather.py  test_web_crawl.py  test_web_search.py
