[tool.poetry]
name = "testagent"
version = "0.1.0"
description = ""
authors = ["MuhibNayem <nayem.drmc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.8"
langchain-openai = "^1.0.3"
langchain-community = "^0.4.1"
langgraph = "^1.0.3"
typer = "^0.20.0"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
google-search-results = "^2.4.2"
pydantic = "^2.12.4"
redis = "^5.0.4"
ollama = "^0.6.1"
deepagents = "^0.2.7"
langsmith = "^0.4.44"
rich = "^14.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
