[tool.poetry]
name = "luminamind"
version = "0.1.0"
description = ""
authors = ["MuhibNayem <nayem.drmc@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "luminamind"

[tool.poetry.scripts]
luminamind = "luminamind.main:cli"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.8"
langchain-openai = "^1.0.3"
langchain-community = "^0.4.1"
langgraph = "^1.0.3"
typer = "^0.20.0"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
google-search-results = "^2.4.2"
pydantic = "^2.12.4"
redis = "^5.0.4"
ollama = "^0.6.1"
deepagents = "^0.2.7"
langsmith = "^0.4.44"
rich = "^14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"  
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
pytest-xdist = "^3.6.1"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.1"
pre-commit = "^3.8.0"    
fakeredis = "^2.25.2"
freezegun = "^1.5.1"
pytest-dotenv = "^0.5.2"
httpx = "^0.28.1"
 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
