[tool.poetry]
name = "luminamind"
version = "0.0.1.1.3"
description = ""
authors = ["MuhibNayem <nayem.drmc@gmail.com>"]
readme = "README.md"
include = ["langgraph.json"]

[[tool.poetry.packages]]
include = "luminamind"

[tool.poetry.scripts]
luminamind = "luminamind.main:cli"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.8"
langchain-openai = "^1.0.3"
langchain-community = "^0.4.1"
langgraph = "^1.0.3"
typer = "^0.20.0"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
google-search-results = "^2.4.2"
pydantic = "^2.12.4"
redis = "^5.0.4"
ollama = "^0.6.1"
deepagents = "^0.2.7"
langsmith = "^0.4.44"
rich = "^14.2.0"
prompt_toolkit = "^3.0.48"
langchain-ollama = "^1.0.0"
langgraph-cli = {extras = ["inmem"], version = "^0.4.7"}
patch-ng = "^1.19.0"
questionary = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
